macro-template/tests/ui/err/missing_row_comma.stderr
error: expected `,`
 --> tests/ui/err/missing_row_comma.rs:7:13
  |
7 |             (u32, 4),
  |             ^
